$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.16-13 (opened Feb 15, 2009)

	* rad.null: failed with family = gaussian and Gamma.

	* simulate.rda: new method to simulate responses with random error
	for an rda() result object. The function uses Normal error, and
	estimates the sd separately for each species from their rda
	residuals. Normal error is justified by least squares fitting in
	rda. This could be made to use permutations of residuals. Not yet
	implemented for cca or capscale results. For cca we -- at least --
	need to handle weights, and the capscale result would be rda
	result, since the method cannot be directly implemented for
	dissimilarities. The function was triggered by Ben Bolker's email
	to R-devel mainling list
	https://stat.ethz.ch/pipermail/r-devel/2009-February/052116.html
	
Version 1.16-12 (closed Feb 15, 2009)

	* anova.ccabyaxis: gained keyword 'cutoff' (defaults 1) to break
	from permutation tests after exceeding the P-value given in the
	argument. The keyword was introduced because rda and cca are
	occasionally used with a huge number of constraints (like PCNM
	vectors) where tests take a very long time, although only a couple
	of first axes are significant. The keyword is still undocumented,
	and will remain so because this change is still experimental. 
	
	* contribdiv: new functions for contribution diversity as an
	alternative to simple additive diversity following Lu, Wagner &
	Chen, Basic and Applied Ecology 8, 1-12 (2007).
	
Version 1.16-11 (closed Feb 9, 2009)

	* anova.cca: used different random number sequence for the second
	term with by = "margin". 

	* ordirgl & orgltext: removed work arounds for very old versions
	(pre-0.65) of the rgl package.

Version 1.16-10 (closed Jan 28, 2009)

	* commsimulator: failed if input data (x) were a data.frame.

	* metaMDS: really do not evaluate no.shared() if set
	noshare=0. Triggered by a problem report with missing data. 
